@@ -321,8 +321,11 @@ proc ::tcl::tm::Defaults {} {
 	set sep ":"
     }
     for {set n $minor} {$n >= 0} {incr n -1} {
-	set ev TCL${major}.${n}_TM_PATH
-	if {[info exists env($ev)]} {
+	foreach ev [list \
+			TCL${major}.${n}_TM_PATH \
+			TCL${major}_${n}_TM_PATH \
+        ] {
+	    if {![info exists env($ev)]} continue
 	    foreach p [split $env($ev) $sep] {
 		path add $p
 	    }
